--- a/Jupyter_under_WindowsUbuntu.ipynb
+++ b/Jupyter_under_WindowsUbuntu.ipynb
@@ -18,7 +18,7 @@
     "`wget https://repo.anaconda.com/archive/Anaconda3-5.2.0-Linux-x86_64.sh`\n",
     "\n",
     "#### After successful download run the following code to install. It doesnt matter if you are already running a bash terminal. You have to use `bash` at the beginning of line\n",
-    "`Anaconda3-5.2.0-Linux-x86_64.sh`\n",
+    "`bash Anaconda3-5.2.0-Linux-x86_64.sh`\n",
     "\n",
     "##### Run Jupyterlab by entering `jupyter lab` If you encounter the following error message:\n",
     "`jupyter command not found, but can be installed with:\n",
@@ -29,6 +29,13 @@
     "##### You can check the version of conda with:  `conda --version` \n",
     "##### Start the Jupyter Lab notebook with  `jupyterlab` and copy the link into a webbrowser under windows!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
