--- a/JupyterNotebooks/Bulk_plotting.ipynb
+++ b/JupyterNotebooks/Bulk_plotting.ipynb
@@ -96,7 +96,7 @@
     "    ax = d.plot('time (usec)','volt (mV)', figsize=(20,15))\n",
     "    ax.set_xlim(None, None)\n",
     "    ax.set_ylim(None, None)\n",
-    "    ax.legend([data]) # plot legend should be the name of the file, which is in numFiles\n",
+    "    ax.legend([data], prop={'size': 20}) # plot legend should be the name of the file, which is in numFiles\n",
     "    ax.set_ylabel(\"Signal (mV)\", fontname=\"Arial\", fontsize=26)\n",
     "    ax.set_xlabel(\"Time ($\\mu$s)\", fontname=\"Arial\", fontsize=26)\n",
     "    ax = plt.gca()\n",
