--- a/JupyterNotebooks/Bulk_plotting.ipynb
+++ b/JupyterNotebooks/Bulk_plotting.ipynb
@@ -16,9 +16,10 @@
    "source": [
     "%%bash\n",
     "pwd\n",
+    "echo # inserts newline\n",
     "ls\n",
-    "#comment\n",
-    "head -8"
+    "echo # inserts newline\n",
+    "head -8 "
    ]
   },
   {
@@ -96,7 +97,7 @@
     "    ax = d.plot('time (usec)','volt (mV)', figsize=(20,15))\n",
     "    ax.set_xlim(None, None)\n",
     "    ax.set_ylim(None, None)\n",
-    "    ax.legend([data], prop={'size': 20}) # plot legend should be the name of the file, which is in numFiles\n",
+    "    ax.legend([data]) # plot legend should be the name of the file, which is in numFiles\n",
     "    ax.set_ylabel(\"Signal (mV)\", fontname=\"Arial\", fontsize=26)\n",
     "    ax.set_xlabel(\"Time ($\\mu$s)\", fontname=\"Arial\", fontsize=26)\n",
     "    ax = plt.gca()\n",
