--- a/JupyterNotebooks/Bulk_plotting.ipynb
+++ b/JupyterNotebooks/Bulk_plotting.ipynb
@@ -17,9 +17,10 @@
     "%%bash\n",
     "pwd\n",
     "echo # inserts newline\n",
-    "ls\n",
-    "echo # inserts newline\n",
-    "head -8 "
+    "ls *txt | wc -l  # show the number of txt files\n",
+    "ls *dat | wc -l  # show the number of dat files\n",
+    "echo #comment\n",
+    "head -6 "
    ]
   },
   {
