--- a/JupyterNotebooks/Bulk_plotting.ipynb
+++ b/JupyterNotebooks/Bulk_plotting.ipynb
@@ -19,6 +19,8 @@
     "echo # inserts newline\n",
     "ls *txt | wc -l  # show the number of txt files\n",
     "ls *dat | wc -l  # show the number of dat files\n",
+    "echo # inserts newline\n",
+    "ls -1 | head -2\n",
     "echo #comment\n",
     "head -6 "
    ]
